<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_mealplan"
        android:orderInCategory="20"
        android:title="@string/meal_plan"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/nav_fridge"
        android:orderInCategory="40"
        android:title="@string/fridge"
        android:icon="@drawable/ic_baseline_kitchen_24"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>

    <item
        android:id="@+id/nav_favorites"
        android:orderInCategory="50"
        android:title="@string/favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"/>
</menu>