<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    tools:context=".ui.fridge.FridgeAddContentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_layout_spacing"
            android:layout_weight="1"
            android:hint="@string/item_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_fridge_add_content_ingredientName"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fragment_fridge_add_content_enableScanningFeatureTextView"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/login_to_enable_scanning_feature"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_fridge_add_content_scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/scan"
            android:layout_margin="@dimen/default_layout_spacing"
            app:icon="@drawable/ic_baseline_qr_code_scanner_24"/>
    </LinearLayout>




    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="@dimen/default_corner_radius_minus"
        app:cardCornerRadius="@dimen/default_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/default_layout_spacing"
                android:layout_marginBottom="@dimen/default_layout_spacing"
                android:text="@string/details"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/default_layout_spacing"
                android:background="?android:attr/dividerVertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_layout_spacing"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"

                    android:hint="@string/amount">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragment_fridge_add_content_amountOfIngredient"
                        android:singleLine="true"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_fridge_add_measureIn_spinner"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/measured_in"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/fragment_fridge_add_measureIn"
                        android:labelFor="@+id/fragment_fridge_add_measureIn_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="LabelFor" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>



            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="2" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_fridge_add_content_saveButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/save"/>
            </LinearLayout>



        </LinearLayout>




    </com.google.android.material.card.MaterialCardView>





</LinearLayout>