<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:theme="@style/ThemeOverlay.MadPlanen.FullscreenContainer"
    tools:context=".ui.barcode.BarcodeScannerActivity">


    <SurfaceView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/goldpalette_500"
        app:cardCornerRadius="@dimen/default_corner_radius"
        app:layout_constraintBottom_toTopOf="@+id/scan_scannerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scan_informationArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/scan_waitingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/scan_txtContent"
                    style="@style/TextAppearance.AppCompat.Small.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/scanning_code" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/scan_foundItemLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/scan_foundItemTextView"
                    style="@style/TextAppearance.AppCompat.Large.Inverse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="" />

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Small.Inverse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/correct" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="correctClick"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_thumb_up_24"
                        android:contentDescription="@string/correct" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="incorrectClick"
                        android:padding="10dp"
                        android:src="@drawable/ic_baseline_thumb_down_24"
                        android:contentDescription="@string/incorrect" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>



    <dk.ipfortify.madplanen.util.ScannerView
        android:id="@+id/scan_scannerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.80" />


</androidx.constraintlayout.widget.ConstraintLayout>